Updated date format

--- a/html/ang.html
+++ b/html/ang.html
@@ -39,7 +39,7 @@
 			<h2>Values from input</h2>
 			<p>Text input: {{textString}}</p>
 			<p>Checkbox input: {{booleanValue}}</p>
-			<p>Date input: {{dateValue}}</p>
+			<p>Date input: {{dateValue.toLocaleDateString("en-US")}}</p>
 			<p>Radio input: {{radioValue}}</p>
 		</div>
 	</section>
